--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,7 +8,7 @@
       <div class="footer-col  footer-col-1">
         <ul class="contact-list">
           <li>{{ site.title }}</li>
-          <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
+          <!--<li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>-->
         </ul>
       </div>
 
@@ -46,7 +46,7 @@
       </div>
 
       <div class="footer-col  footer-col-3">
-        <p class="text">{{ site.description }}</p>
+<!--        <p class="text">{{ site.description }}</p>-->
       </div>
     </div>
 
