--- a/_includes/_footer.html
+++ b/_includes/_footer.html
@@ -14,4 +14,4 @@
 
 <span>&copy; {{ site.time | date: '%Y' }} {{ site.owner.name }}. Powered by <a href="http://jekyllrb.com" rel="nofollow">Jekyll</a> using the <a href="https://mademistakes.com/work/minimal-mistakes-jekyll-theme/" rel="nofollow">Minimal Mistakes</a> theme.</span>
 </br>
-<span>Quality checking by <a href="http://www.webintrospector.com" rel="nofollow">Web Introspector.</a></span>
+<span>Quality checking by <a href="https://webintrospector.net" rel="nofollow">Web Introspector.</a></span>
